Spinal motions text wrap fix

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -30,7 +30,7 @@ a {
     text-align: center;
     margin: 0;
     margin-right: 5vw;
-    font-size: 6vw;
+    font-size: 5vw;
 }
 .search-type-selector {
     display: flex;
@@ -40,7 +40,8 @@ a {
 .search-type-selector button {
     width: 100%;
     height: 75px;
-    font-size: 4vw;
+    font-size: 3vw;
+    white-space: nowrap;
     transition-duration: 0.5s;
     background-color: khaki;
 }
